--- a/templates/pages/board/board_default.html
+++ b/templates/pages/board/board_default.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css">
     <link href=’http://fonts.googleapis.com/earlyaccess/notosanskr.css' rel=‘stylesheet’ type=‘text/css’>
     <link rel="stylesheet" type="text/css" href="/static/common/iu.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/pages/projects/projectGallery_main.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/pages/projects/projectGallery_default.css">
     <link rel="stylesheet" type="text/css" href="/static/project/pagination.css">
     <link rel="stylesheet" type="text/css" href="/static/css/compositions/project_ver2.css">
     <link href='http://fonts.googleapis.com/earlyaccess/notosanskr.css' rel='stylesheet' type='text/css'>
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="/static/project/board.js"></script>
   </head>
   <body>
-    <div class="iu-page projectGallery_main">
+    <div class="iu-page projectGallery_default">
       <header class="header">
       </header>
       <section class="iu-page-content page-content">
@@ -36,29 +36,22 @@
                 <input class="iux-has-hover iu-pg-button  project_search_btn" type="submit" value="찾기" style="box-shadow: 0 0 0px 0px transparent;">
               </div>
             </div>
-            <div class="iu-collection collection-266">
-              {% for image in images %}
-              	<div class="iu-import import-267">
-              		<a class="iux-inner-link" href="/">
-              			{% include './project_ver2.html' %}
-              		</a>
-              	</div>
-              <style>
-              @media screen and (max-width: 959px) {
-              	.thumbnail {
-              		max-width: 135px;
-              	}
-              }
-              </style>
-              {% endfor %}
+            <div class="iu-box box">
+              <div class="iu-text project_search_result">
+                <p>"{{searchText}}"로 검색된 이미지: 0개</p>
+              </div>
+              <div class="iu-text text-321">
+                <p>죄송합니다.</p>
+                <p>찾으시는 이미지가 없습니다.</p>
+              </div>
             </div>
             <nav class="iu-pg-page-link-set  pagination">
               <div>
-              	{% if images_page.has_other_pages %}
+              	{% if images.has_other_pages %}
               		<ul>
               		<a class="first"><li>&#60;&#60;</li></a>
               		<a class="prev"><li>&#60;</li></a>
-              		{% for i in images_page.paginator.page_range %}
+              		{% for i in images.paginator.page_range %}
               			{% if i == currentPage %}
               				<a class="page_all" style="pointer-events: none;"><li style="color: black">{{ i }}</li></a>
               			{% else %}
@@ -74,7 +67,7 @@
           </div>
         </section>
       </section>
-      <footer>
+      <footer class="footer">
       </footer>
       <div class="hidden_currentPage" name="currentPage" style="visibility:hidden;">{{ currentPage }}</div>
       <div class="hidden_searchText" name="searchText" style="visibility:hidden;">{{ searchText }}</div>
